# mnist-ggml

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: mnist-test.py  mnist.py
source/: main.cpp
